--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:root@localhost:3306/saas-backed?schema=public"
+
+JWT_EXPIRES_TIME = 1
+
+JWT_SECRET_STRING="your_secret_key_here"
