--- a/.env
+++ b/.env
@@ -9,3 +9,13 @@ DATABASE_URL="mysql://root:root@localhost:3306/saas-backed?schema=public"
 JWT_EXPIRES_TIME = 1
 
 JWT_SECRET_STRING="your_secret_key_here"
+
+BASE_URL='http://localhost:3000'
+
+EMAIL_HOST='smtp.gmail.com'
+EMAIL_PORT=465
+EMAIL_SECURE=true
+EMAIL_FROM='akakigumberidze988@gmail.com'
+EMAIL_USER='akakigumberidze988@gmail.com'
+EMAIL_PASS='keze ypnb qgtv wvnw'
+
