--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=mysql://sweeft:sweeft@localhost:3306/sweeft-database?schema=public
+DATABASE_URL=mysql://sweeftUser:sweeftPassword@mysql:3306/sweeft_db?schema=public
 JWT_EXPIRES_TIME=1
 JWT_SECRET_STRING=your_secret_key_here
 BASE_URL=http://localhost:3000
