--- a/dockerFile
+++ b/dockerFile
@@ -12,10 +12,12 @@ RUN npm install
 COPY . .
 # Generate Prisma client
 
-RUN npx prisma generate
+# RUN npx prisma generate
 
-RUN npm run build
+# RUN npm run build
 # Expose the port
 EXPOSE 3000 
 # Start the application in watch mode
-CMD ["npm","run" ,"start:prod"]
+# CMD ["npm","run" ,"start:prod"]
+
+CMD ["./migrate-start.sh"]
