--- a/dockerFile
+++ b/dockerFile
@@ -10,14 +10,11 @@ COPY package-lock.json .
 RUN npm install 
 
 COPY . .
-# Generate Prisma client
+RUN  npx prisma generate
+RUN apt-get update && apt-get install -y default-mysql-client
+RUN npm run build
 
-# RUN npx prisma generate
-
-# RUN npm run build
-# Expose the port
 EXPOSE 3000 
-# Start the application in watch mode
-# CMD ["npm","run" ,"start:prod"]
 
-CMD ["./migrate-start.sh"]
+
+CMD ["npm","run" ,"start:prod"]
